maintenance: fix opam build
declare astring as a dependency

Signed-off-by: Pau Ruiz Safont <pau.safont@citrix.com>

--- a/ezxenstore.opam
+++ b/ezxenstore.opam
@@ -9,12 +9,14 @@ build: [[ "dune" "build" "-p" name "-j" jobs ]]
 depends: [
   "ocaml"
   "dune" {build & >= "1.4"}
+  "astring"
   "cmdliner"
   "logs"
   "uuidm"
   "xenctrl"
   "xenstore"
   "xenstore_transport"
+  "alcotest" {with-test}
 ]
 synopsis:
   "An easy-to-use interface to xenstore"
