--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,12 @@
 language: c
-sudo: required
-services:
-  - docker
+service: docker
 install:
   - wget https://raw.githubusercontent.com/ocaml/ocaml-ci-scripts/master/.travis-docker.sh
-script:
-  - bash -ex .travis-docker.sh
+  - wget https://raw.githubusercontent.com/xapi-project/xs-opam/master/tools/xs-opam-ci.env
+  - source xs-opam-ci.env
+script: bash -ex .travis-docker.sh
 env:
   global:
-    - DISTRO=debian-unstable
-    - PACKAGE="ezxenstore"
     - PINS="ezxenstore:."
-    - BASE_REMOTE="https://github.com/xapi-project/xs-opam.git"
-  matrix:
-    - OCAML_VERSION="4.07"
+  jobs:
+    - PACKAGE="ezxenstore"
